@startuml
class Main {
    + static void main(String[] args)
}

class Handphone {
    - String merk
    - String model
    + Handphone(String merk, String model)
    + void nyalakan()
    + void matikan()
    + void telepon(String nomor)
}

class Smartphone {
    + Smartphone(String merk, String model)
    + void nyalakan()
    + void matikan()
    + void telepon(String nomor)
    + void aksesInternet()
}

class FeaturePhone {
    + FeaturePhone(String merk, String model)
    + void nyalakan()
    + void matikan()
    + void telepon(String nomor)
    + void mainGameSnake()
}

Main --> Handphone :uses
Main --> Smartphone :uses 
Main --> FeaturePhone :uses 
Handphone <|-- Smartphone
Handphone <|-- FeaturePhone
@enduml